{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 13,
  "lineage": "4ea088d5-7d31-2079-b771-d69200ae4303",
  "resources": [
    {
      "module": "module.IGANDROUTE",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459566673031:internet-gateway/igw-07651123bb87b7892",
            "id": "igw-07651123bb87b7892",
            "owner_id": "459566673031",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0352184c9fc3bdcab"
          }
        }
      ]
    },
    {
      "module": "module.IGANDROUTE",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumpubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459566673031:route-table/rtb-0ae21332e9678ca3a",
            "id": "rtb-0ae21332e9678ca3a",
            "owner_id": "459566673031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07651123bb87b7892",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumpubrt"
            },
            "tags_all": {
              "Name": "mumpubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0352184c9fc3bdcab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.IGANDROUTE.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.SECURITYGROUP",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mumprisg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459566673031:security-group/sg-05720eba711e8567c",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05720eba711e8567c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mumprisg",
            "name_prefix": "",
            "owner_id": "459566673031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mumprisg"
            },
            "tags_all": {
              "Name": "mumprisg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0352184c9fc3bdcab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SECURITYGROUP",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mumpubsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459566673031:security-group/sg-07d0e9dbdf74180e3",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d0e9dbdf74180e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "mumpubsg",
            "name_prefix": "",
            "owner_id": "459566673031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mumpubsg"
            },
            "tags_all": {
              "Name": "mumpubsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0352184c9fc3bdcab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SUBNET",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumprisub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459566673031:subnet/subnet-0f3bde1e1f07530d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3bde1e1f07530d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459566673031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumprisub"
            },
            "tags_all": {
              "Name": "mumprisub"
            },
            "vpc_id": "vpc-0352184c9fc3bdcab"
          }
        }
      ]
    },
    {
      "module": "module.SUBNET",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumpubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459566673031:subnet/subnet-083ef23a9b5748b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083ef23a9b5748b00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459566673031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumpubsub"
            },
            "tags_all": {
              "Name": "mumpubsub"
            },
            "vpc_id": "vpc-0352184c9fc3bdcab"
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mumvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459566673031:vpc/vpc-0352184c9fc3bdcab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5e01c2935e5486f",
            "default_route_table_id": "rtb-07c8b90656790dd8c",
            "default_security_group_id": "sg-04fab6a67eedc99e7",
            "dhcp_options_id": "dopt-092294b1f34026d0e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0352184c9fc3bdcab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c8b90656790dd8c",
            "owner_id": "459566673031",
            "tags": {
              "Name": "mumvpc"
            },
            "tags_all": {
              "Name": "mumvpc"
            }
          }
        }
      ]
    }
  ]
}